# PiSwitch

./: CMakeLists.txt  README.md  main.c
cmake/: FindBCM2835.cmake
service/: PiSwitch.in  piswitch.cfg
src/: PiSwitch.c  config.c  config.h  daemon.c  daemon.h
